# chocolates

./: Cargo.toml  README.md
benches/: basic.rs  blocking.rs  depth.rs  trie.rs
src/: collections.rs  lib.rs  thread_pool.rs
src/collections/: seq.rs  trie.rs
src/thread_pool/: callback.rs  future.rs  std_future.rs
src/thread_pool/global_queue/: mod.rs
src/thread_pool/global_queue/multi_level/: metrics.rs  mod.rs  stats.rs
