[package]
name = "chocolates"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2018"

[dependencies]
num_cpus = "1.0"
crossbeam-deque = "0.7"
parking_lot_core = "0.6"
futures = "0.1"

[dev-dependencies]
tokio-threadpool = { version = "0.1" }
futures-cpupool = "0.1"
rand = "0.6"
threadpool = "1.0"
criterion = "0.2"

[[bench]]
name = "depth"
harness = false

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "blocking"
harness = false

[[bench]]
name = "trie"
harness = false

[profile.bench]
debug = true
